--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -56,7 +56,7 @@
         </div>
         <textarea class="form-control" id="form-story-text" type="text" name="text"></textarea>
         <div id="story-form-footer">
-          <!-- <select class="form-control" name="genre" required>
+          <select class="form-control" name="genre" required>
             <option value="" disabled selected hidden>Select a genre</option>
             <option value="adventure">Adventure</option>
             <option value="children's">Children's</option>
@@ -75,7 +75,7 @@
             <option value="thriller">Thriller</option>
             <option value="western">Western</option>
             <option value="yound adult">Young Adult</option>
-          </select> -->
+          </select>
           <button class="btn btn-secondary new-story-button">S A V E</button>
           <button type="submit" class="btn btn-secondary new-story-button">S U B M I T</button>
         </div>
