Add genre form label

--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -56,26 +56,29 @@
         </div>
         <textarea class="form-control" id="form-story-text" type="text" name="text"></textarea>
         <div id="story-form-footer">
-          <select class="form-control" name="genre" required>
-            <option value="" disabled selected hidden>Select a genre</option>
-            <option value="adventure">Adventure</option>
-            <option value="children's">Children's</option>
-            <option value="comedy">Comedy</option>
-            <option value="coming of age">Coming of age</option>
-            <option value="fantasy">Fantasy</option>
-            <option value="folklore">Folklore</option>
-            <option value="historical">Historical</option>
-            <option value="horror">Horror</option>
-            <option value="political">Political</option>
-            <option value="psychological">Psychological</option>
-            <option value="romance">Romance</option>
-            <option value="satire">Satire</option>
-            <option value="science fiction">Science Fiction</option>
-            <option value="spy">Spy</option>
-            <option value="thriller">Thriller</option>
-            <option value="western">Western</option>
-            <option value="yound adult">Young Adult</option>
-          </select>
+          <div id="new-story-genre">
+            <label class="new-story" for="genre">GENRE:</label>
+            <select class="form-control" name="genre" required>
+              <option value="" disabled selected hidden>Select a genre</option>
+              <option value="adventure">Adventure</option>
+              <option value="children's">Children's</option>
+              <option value="comedy">Comedy</option>
+              <option value="coming of age">Coming of age</option>
+              <option value="fantasy">Fantasy</option>
+              <option value="folklore">Folklore</option>
+              <option value="historical">Historical</option>
+              <option value="horror">Horror</option>
+              <option value="political">Political</option>
+              <option value="psychological">Psychological</option>
+              <option value="romance">Romance</option>
+              <option value="satire">Satire</option>
+              <option value="science fiction">Science Fiction</option>
+              <option value="spy">Spy</option>
+              <option value="thriller">Thriller</option>
+              <option value="western">Western</option>
+              <option value="yound adult">Young Adult</option>
+            </select>
+          </div>
           <button class="btn btn-secondary new-story-button">S A V E</button>
           <button type="submit" class="btn btn-secondary new-story-button">S U B M I T</button>
         </div>
