Group right footer elements together

--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -79,10 +79,11 @@
               <option value="yound adult">Young Adult</option>
             </select>
           </div>
-          <button class="btn btn-secondary new-story-button">S A V E</button>
-          <button type="submit" class="btn btn-secondary new-story-button">S U B M I T</button>
+          <div>
+            <button class="btn btn-secondary new-story-button">S A V E</button>
+            <button type="submit" class="btn btn-secondary new-story-button">S U B M I T</button>
+          </div>
         </div>
-      </div>
     </form>
   </main>
   <!-- Bootstrap JS -->
