--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -79,7 +79,7 @@
               <option value="yound adult">Young Adult</option>
             </select>
           </div>
-          <div>
+          <div id="new-story-buttons">
             <button class="btn btn-secondary new-story-button">S A V E</button>
             <button type="submit" class="btn btn-secondary new-story-button">S U B M I T</button>
           </div>
