Adjust title margins

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -25,10 +25,10 @@ main#new-story-main {
 center form title
 */
 h3#new-story-title {
-  margin: 5% 0% 10%;
+  margin: 0% 0% 4%;
   display: flex;
   justify-content: center;
-  color: #FFFFFF;
+  color: $white;
   font-weight: bold;
   font-size: 3rem;
 }
