Add shadows and create story icon/link

--- a/styles/components/pages/home_page.scss
+++ b/styles/components/pages/home_page.scss
@@ -12,6 +12,12 @@
   font-weight: 700;
   margin: 10rem auto;
   padding-bottom: 2rem;
+  display: flex;
+  justify-content: space-between;
+
+  a {
+    color: inherit;
+  }
 }
 
 /*title, author, progress, genre*/
