--- a/styles/components/partials/_side_panel.scss
+++ b/styles/components/partials/_side_panel.scss
@@ -60,6 +60,7 @@
   height: 3.0rem;
   width: 7.5rem;
   letter-spacing: 0.2rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 10px 15px;
 }
 
 /* buttons when not logged in */
