--- a/styles/components/pages/home_page.scss
+++ b/styles/components/pages/home_page.scss
@@ -14,9 +14,19 @@
   padding-bottom: 2rem;
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
 
   a {
+    background-color: $gold;
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
     color: inherit;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
   }
 }
 
