--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -28,6 +28,7 @@ body {
   .side-panel-container {
     position: static;
     width: 100vw;
+    box-shadow: 0 5px 40px 2px rgba(0, 0, 0, 0.56);
 
     #side-panel {
       height: 50vh;
