--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
   <title>Home Page</title>
 
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
@@ -35,7 +34,10 @@
 
   <div class="main-body text-body">
     <div class="homepage-wrapper">
-        <h1>Welcome<%= userName && `, ${userName}` %>! <a href="/stories/new" title="Create a Story"><i class="fas fa-pencil-alt fa-lg"></i></a></h1>
+        <h1>
+          Welcome<%= userName && `, ${userName}` %>!
+          <a href="/stories/new" title="Create a Story"><i class="fas fa-pencil-alt fa-lg"></i></a>
+        </h1>
 
 
       <% for(let story of stories) { %>
