Implement dynamic greeting on side display panel

--- a/styles/components/partials/_side_panel.scss
+++ b/styles/components/partials/_side_panel.scss
@@ -69,3 +69,12 @@
   column-gap: $s-size;
 }
 
+.logged-in {
+  flex-direction: column;
+  justify-content: flex-end;
+
+  p {
+    margin-bottom: $s-size;
+  }
+}
+
