--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -42,6 +42,15 @@ body {
       right: $l-size;
     }
 
+    /*(logout) button when logged in*/
+    .logged-in {
+      flex-direction: row;
+      align-items: center;
+      p {
+        margin-bottom: $s-size;
+      }
+    }
+
     /*Wb; Logo*/
     .side-panel-top h2 {
       margin-bottom: $m-size;
@@ -62,7 +71,7 @@ body {
 }
 
 /*For even smaller screens*/
-@media only screen and (max-width: 405px) {
+@media only screen and (max-width: 420px) {
   /*Remove side panel app name 'Writer's Block' for aesthetics*/
   .side-panel-top h3 {
     visibility: hidden;
