Complete story styling, expand contribution by id, button functions to go back to block and form

--- a/styles/components/pages/story_page.scss
+++ b/styles/components/pages/story_page.scss
@@ -1,5 +1,25 @@
 // See: https://sass-lang.com/
 
+
+// // Colours
+// $gray: #636363;
+// $white: #ffffff;
+// $black: #000000;
+// $purp: #6117ff;
+// $gold: #E1CF8D;
+
+// // Spacing
+// $s-size: 1.2rem;
+// $m-size: 1.6rem;
+// $l-size: 3.2rem;
+// $xl-size: 4.8rem;
+// $mobile-breakpoint: 415px;
+
+// // Panel Widths
+// $side-panel-width: 37.5%;
+// $main-body-width: 62.5%;
+
+
 /* [story_page.scss] */
 
 body,
@@ -68,7 +88,6 @@ html {
 
 #title {
   font-weight: bold;
-
 }
 
 .add-block-btn {
@@ -88,17 +107,44 @@ html {
   padding-left: 1rem;
 }
 
+.add-block-btn:hover {
+  animation: shake 3s cubic-bezier(0.62, 0.33, 0.46, 0.63);
+  transform: translate3d(0, 0, 0);
+  cursor: pointer;
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+  30%, 50%, 70% {
+    transform: translate3d(-2px, 0, 0);
+  }
+  40%, 60% {
+    transform: translate3d(2px, 0, 0);
+  }
+}
 
 //------------------------------------------ CONTRIBUTION SECTION-------------------------------------
+
 
 .contribution-container {
   border-style: solid;
   border-width: 0.1rem;
   border-color: 	#D3D3D3;
-  border-radius: 2rem;
-  box-shadow: 0 0 1rem #ccc;
+  border-radius: 1rem;
+  box-shadow: 0 0 0.5rem #ccc;
   display: flex;
+  justify-content: space-between;
   margin-bottom: 3rem ;
+}
+
+.contribution-container:hover {
+  box-shadow: 0.5rem 0.5rem 1rem #ccc;
+  cursor: pointer;
 }
 
 .contribution-content {
@@ -131,32 +177,97 @@ html {
   justify-content: center;
   align-items: center;
   margin-right: 2rem;
-
 }
+
+
 i {
   color: $purp;
 }
+i:hover {
+  color: $purp;
+  cursor: pointer;
+  position: relative;
+  animation-name: bounce;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  cursor: pointer;
+}
+
+@keyframes bounce {
+  0%   {top:0px;}
+  50%  {top:5px;}
+  100% {top:0px;}
+}
+
+tag {
+  font-size: 1.4rem;
+  font-family: 'Roboto', sans-serif;
+  padding: 0rem 1rem;
+}
 
 
 
+//------------------------------------------ FULL CONTRIBUTION-------------------------------------
 
 
+#full-contribution-content {
+  display: flex;
+  flex-direction: column;
+}
+.hidden {
+  display: none;
+}
 
 
-// // Colours
-// $gray: #636363;
-// $white: #ffffff;
-// $black: #000000;
-// $purp: #6117ff;
-// $gold: #E1CF8D;
+.contribution-text {
+  font-size: 1.6rem;
+  color: $purp;
+  margin-bottom: 1rem;;
+}
 
-// // Spacing
-// $s-size: 1.2rem;
-// $m-size: 1.6rem;
-// $l-size: 3.2rem;
-// $xl-size: 4.8rem;
-// $mobile-breakpoint: 415px;
 
-// // Panel Widths
-// $side-panel-width: 37.5%;
-// $main-body-width: 62.5%;
+.full-contribution-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+  padding-bottom: 1rem;
+}
+
+
+#upvote-horizontal {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+}
+
+
+.back-to-blocks {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+
+}
+
+.back-to-blocks p {
+  color: black;
+  margin: 0.2rem;
+  margin-bottom: 3rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.25rem;
+  font-size: 1.4rem;
+  padding-left: 1rem;
+}
+
+.fa-chevron-left {
+  color: black;
+}
+
+.back-to-blocks:hover {
+  animation: shake 3s cubic-bezier(0.62, 0.33, 0.46, 0.63);
+  transform: translate3d(0, 0, 0);
+  cursor: pointer;
+}
+
