Fix typo in 'young adult' genre value

--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -60,7 +60,7 @@
             <label class="new-story" for="genre">GENRE:</label>
             <select class="form-control" name="genre" required>
               <option value="" disabled selected hidden>Select a genre</option>
-              <option value="adventure">Adventure</option>
+              <option class="genre-dropdown" value="adventure">Adventure</option>
               <option value="children's">Children's</option>
               <option value="comedy">Comedy</option>
               <option value="coming of age">Coming of age</option>
@@ -76,7 +76,7 @@
               <option value="spy">Spy</option>
               <option value="thriller">Thriller</option>
               <option value="western">Western</option>
-              <option value="yound adult">Young Adult</option>
+              <option value="young adult">Young Adult</option>
             </select>
           </div>
           <div id="new-story-buttons">
