comment out save button (stretch)

--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -60,7 +60,7 @@
             <label class="new-story" for="genre">GENRE:</label>
             <select class="form-control" name="genre" required>
               <option value="" disabled selected hidden>Select a genre</option>
-              <option class="genre-dropdown" value="adventure">Adventure</option>
+              <option value="adventure">Adventure</option>
               <option value="children's">Children's</option>
               <option value="comedy">Comedy</option>
               <option value="coming of age">Coming of age</option>
@@ -80,7 +80,7 @@
             </select>
           </div>
           <div id="new-story-buttons">
-            <button class="btn btn-secondary new-story-button">S A V E</button>
+            <!-- <button class="btn btn-secondary new-story-button">S A V E</button> -->
             <button type="submit" class="btn btn-secondary new-story-button">S U B M I T</button>
           </div>
         </div>
