Make all form fields required

--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -44,17 +44,17 @@
       <div class="form-group mb-2">
         <div class="story-forms-labels">
           <label class="new-story" for="title">TITLE:</label>
-          <input class="form-control" type="text" name="title">
+          <input class="form-control" type="text" name="title" required>
         </div>
         <div class="story-forms-labels">
           <label class="new-story" for="flavour-text">CAPTION:</label>
-          <input class="form-control" type="text" name="flavour_text">
+          <input class="form-control" type="text" name="flavour_text" required>
         </div>
         <div class="story-forms-labels">
           <label class="new-story" for="cover_photo">PHOTO:</label>
-          <input class="form-control" type="text" name="cover_photo">
+          <input class="form-control" type="text" name="cover_photo" required>
         </div>
-        <textarea class="form-control" id="form-story-text" type="text" name="text"></textarea>
+        <textarea class="form-control" id="form-story-text" type="text" name="text" required></textarea>
         <div id="story-form-footer">
           <div id="new-story-genre">
             <label class="new-story" for="genre">GENRE:</label>
