--- a/styles/components/pages/story_page.scss
+++ b/styles/components/pages/story_page.scss
@@ -271,3 +271,76 @@ tag {
   cursor: pointer;
 }
 
+//-------------BLOCK FORM-------------------------------------
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  resize: none;
+}
+#subtitle {
+  resize: none;
+  margin: 0.5rem 0;
+}
+#caption {
+  resize: none;
+  margin: 0.5rem 0;
+}
+#photo {
+  resize: none;
+  margin: 0.5rem 0;
+}
+#block-text {
+  resize: vertical;
+  margin: 0.5rem 0;
+  min-height: 400px;
+}
+
+textarea {
+  border-radius: 0.25rem;
+}
+
+#genre-drop {
+  margin: 0.5rem 0;
+  padding: 0.5rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.25rem;
+  font-size: 1.4rem;
+}
+
+.form-footer {
+  display:flex;
+  justify-content: space-between;
+
+}
+
+label {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.25rem;
+  font-size: 1.4rem;
+}
+
+option {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.25rem;
+  font-size: 1.4rem;
+}
+
+.submit-block-btn {
+  background-color: $gold;
+  border-radius: 2rem;
+  border: none;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.25rem;
+  font-size: 1.4rem;
+  padding: 1rem 2rem;
+  margin: 2rem 0;
+}
