--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -71,17 +71,6 @@ form labels
   margin: 0;
 }
 
-.form-control {
-  background: rgba(255, 255, 255, 0.5);
-  border: none;
-  border-radius: 0.33rem;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  text-transform: uppercase;
-  letter-spacing: 0.25rem;
-  font-size: 1.4rem;
-}
-
 label.new-story {
   width: 20%;
   margin-right: 1.75rem;
@@ -102,8 +91,17 @@ label.new-story {
 /*
 form input
 */
+.form-control {
+  background: rgba(255, 255, 255, 0.5);
+  border: none;
+  border-radius: 0.33rem;
+  font-size: 1.4rem;
+}
+
 input.form-control {
   width: 80%;
+  font-family: 'Source-serif Pro', Times, serif;
+  font-size: 1.6rem;
 }
 
 .form-group > * {
@@ -115,6 +113,14 @@ input.form-control {
   height: 40vh;
   resize: none;
   padding: 2.5rem;
+  font-family: 'Source-serif Pro', Times, serif;
+}
+
+select.form-control {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.25rem;
 }
 
 /*
@@ -145,15 +151,7 @@ select.form-control {
   width: 15vw;
 }
 
-.new-story-button {
-  border-radius: 50px;
-  background-color: inherit;
-  color: black;
-  font-weight: bold;
-  border-width: 0.09rem;
-  border-color: black;
-  font-family: "Roboto", Times, serif;
-}
+
 
 #new-story-buttons > * {
   font-size: 1.2rem;
