Increase story text font size

--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -114,6 +114,7 @@ input.form-control {
   resize: none;
   padding: 2.5rem;
   font-family: $serif;
+  font-size: 1.6rem;
 }
 
 select.form-control {
