Add specificity to pencil and arrow icon for color

--- a/styles/components/pages/home_page.scss
+++ b/styles/components/pages/home_page.scss
@@ -28,7 +28,13 @@
     align-items: center;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
   }
+
+  #pencil {
+    color: black;
+  }
+
 }
+
 
 /*title, author, progress, genre*/
 .story-details {
