--- a/styles/components/pages/stories_new.scss
+++ b/styles/components/pages/stories_new.scss
@@ -19,7 +19,17 @@ header
   font-size: 5rem;
   padding-top: 2.5rem;
   align-self: center;
+
+  i {
+    color: white;
+  }
+
+  i:hover {
+    color: white;
+  }
+
 }
+
 
 /*
 center entire form
