--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
     <div class="homepage-wrapper">
         <h1>
           Welcome<%= userName && `, ${userName}` %>!
-          <a href="/stories/new" title="Create a Story"><i class="fas fa-pencil-alt fa-lg"></i></a>
+          <a href="/stories/new" title="Create a Story"><i class="fas fa-pencil-alt fa-lg" id="pencil"></i></a>
         </h1>
 
 
