Make back-arrow go to previous page in history

--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -25,6 +25,8 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
+  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  <script type="text/javascript" src="/scripts/stories_new.js"></script>
 </head>
 
 <body id="new-story-body">
@@ -34,7 +36,7 @@
     </div>
 
     <div class="new-story-right-header">
-      <i class="fas fa-arrow-left"></i>
+      <i class="fas fa-arrow-left" id="back-button"></i>
     </div>
   </header>
 
