--- a/views/partials/_side_panel.ejs
+++ b/views/partials/_side_panel.ejs
@@ -8,7 +8,7 @@
     <h2><%= stories[2].title %></h2>
     <p><%= stories[2].flavour_text %></p>
     <% if (userName) { %>
-      <form method="POST" action="/logout" class="register-login logged-in">
+      <form method="POST" action="users/logout" class="register-login logged-in">
         <p>Hello, <%= userName %>!</p>
         <button>Logout</button>
       </form>
@@ -17,7 +17,7 @@
         <form method="POST" action="/register">
           <button>Register</button>
         </form>
-        <form method="POST" action="/login">
+        <form method="POST" action="users/login/2">
           <button>Login</button>
         </form>
       </div>
