--- a/views/partials/_side_panel.ejs
+++ b/views/partials/_side_panel.ejs
@@ -17,6 +17,7 @@
         <form method="POST" action="/register">
           <button>Register</button>
         </form>
+        <!-- Button logs in as user 2 for now until form is implemented -->
         <form method="POST" action="users/login/2">
           <button>Login</button>
         </form>
