--- a/views/pages/story_page.ejs
+++ b/views/pages/story_page.ejs
@@ -14,6 +14,9 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  <script>
+    let userID = <%= userID %>
+  </script>
   <script type="text/javascript" src="/scripts/app.js"></script>
 
 
@@ -26,6 +29,7 @@
     </style>
 
 </head>
+
 
 <body data-story-id="<%= id %>">
   <div class="side-panel-container">
@@ -79,8 +83,6 @@
         <i class="fas fa-plus"></i>
         <p>Add a block</p>
       </div>
-      <div>
-    </div>
 
 
 
@@ -133,6 +135,7 @@
         </div>
     </div> -->
   </div>
+
     <div class='back-to-blocks'>
       <i class="fas fa-chevron-left"></i>
       <p>Back to blocks</p>
