Import login_required view

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,7 @@
 @import './components/pages/home_page.scss';
 @import './components/partials/side_panel';
 @import './components/pages/stories_new';
+@import './components/pages/login_required';
 
 
 
