--- a/views/pages/login_required.ejs
+++ b/views/pages/login_required.ejs
@@ -43,7 +43,7 @@
   <main id="login-required">
     <h1 id="login-required-message">Uh oh! Please login.</h1>
     <form method="POST" action="/users/login/2">
-      <button class="btn btn-secondary new-story-button">LOGIN</button>
+      <button class="btn btn-secondary new-story-button login-required">LOGIN</button>
     </form>
   </main>
   <!-- Bootstrap JS -->
